--- a/profile-page.html
+++ b/profile-page.html
@@ -20,13 +20,13 @@
           <div class="row">
             <div class="colImg col-auto">
               <img width="150px" src="./assets/avatar.png" alt="" />
-             <button type="button" class="pen btn btn-dark rounded-pill"><i class="bi bi-pencil-fill"></i></button>
+             <button type="button" class="pen btn btn-dark rounded- fs-6 mt-2 me-2pill p-2"><i class="bi bi-pencil-fill"></i></button>
             </div>
             <div class="col-auto">
-              <div class="col border-bottom border-secondary">
-                <span class="badge text-bg-secondary">Strive Student</span>
+              <div class="col m-2 border-bottom border-secondary">
+                <h4 class="bg-secondary p-2">Strive Student</h4>
                 <div class="dropdown">
-                  <h4>Languages:</h4>
+                  <h4 class="mt-3">Languages:</h4>
                   <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">English</button>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">English</a></li>
@@ -35,14 +35,14 @@
                   </ul>
                 </div>
               </div>
-              <div class="col border-bottom border-secondary">
-                <h4>Maturity Settings:</h4>
+              <div class="col m-2 border-bottom border-secondary">
+                <h4 class="mt-3">Maturity Settings:</h4>
                 <h4 class="badge text-bg-secondary">ALL MANURITY RATINGS</h4>
                 <p>Show titles of all maturity for this profile.</p>
-                <button type="button" class="btn btn-outline-secondary">EDIT</button>
+                <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">EDIT</button>
               </div>
-              <div class="col">
-                <h4>Autoplay controls</h2>
+              <div class="col m-2">
+                <h4 class="mt-3">Autoplay controls</h2>
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="checkDefault" />
                   <label class="form-check-label" for="checkDefault"> Autoplay next episode in a series on all devices. </label>
@@ -55,9 +55,9 @@
             </div>
           </div>
           <div>
-            <button type="button" class="btn btn-outline-secondary">SAVE</button>
-            <button type="button" class="btn btn-outline-secondary">CANCEL</button>
-            <button type="button" class="btn btn-outline-secondary">DELETE PROFILE</button>
+            <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">SAVE</button>
+            <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">CANCEL</button>
+            <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">DELETE PROFILE</button>
           </div>
         </div>
       </div>
