--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg bg-body-secondary sticky-top">
+      <nav class="navbar navbar-expand-lg bg-dark  sticky-top" data-bs-theme="dark">
         <div class="container-fluid">
           <img class="logo" width="110" src="./assets/netflix_logo.png" alt="netflix_logo" />
           <button
@@ -54,9 +54,10 @@
                     </form>
                 </div>
               </div>
-              <img class="me-2" width="35" src="./assets/kids_icon.png" alt=""><button><i class="bi bi-bell-fill me-2"></i></button>
+              <botton>KIDS</botton>
+              <button><i class="bi bi-bell-fill me-2"></i></button>
             <div class="d-flex">
-                <div class="dropdown me-1">
+                <div class="dropdown me-1" data-bs-theme="dark">
                   <button type="button" class="btn btn-dark rounded-0 dropdown-toggle p-0" data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="10,20">
                     <img width="35" src="./assets/avatar.png" alt="">
                   </button>
@@ -75,8 +76,8 @@
             <div class="d-flex align-items-center gap-5">
               <h1>Tv Shows</h1>
               <div class="dropdown">
-                <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><span class="me-4">Generes</span></button>
-                <ul class="dropdown-menu">
+                <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" ><span class="me-4">Generes</span></button>
+                <ul class="dropdown-menu" data-bs-theme="dark">
                   <li><a class="dropdown-item" href="#">Thriller</a></li>
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Suspense</a></li>
