--- a/profile-page.html
+++ b/profile-page.html
@@ -13,21 +13,21 @@
       <img width="110" src="./assets/netflix_logo.png" alt="netflix_logo" />
     </header>
 
-    <div class="container">
+    <div class="container mt-5">
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-column">
           <h1 class="border-bottom border-secondary">Edit Profile</h1>
           <div class="row">
             <div class="colImg col-auto">
               <img width="150px" src="./assets/avatar.png" alt="" />
-             <button type="button" class="pen btn btn-dark rounded- fs-6 mt-2 me-2pill p-2"><i class="bi bi-pencil-fill"></i></button>
+             <button type="button" class="pen btn btn-dark rounded-pill border-white fs-6 mt-2 me-2pill p-2"><i class="bi bi-pencil-fill fs-7"></i></button>
             </div>
             <div class="col-auto">
               <div class="col m-2 border-bottom border-secondary">
                 <h4 class="bg-secondary p-2">Strive Student</h4>
                 <div class="dropdown">
                   <h4 class="mt-3">Languages:</h4>
-                  <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">English</button>
+                  <button class="btn btn-outline-light dropdown-toggle mb-4" type="button" data-bs-toggle="dropdown" aria-expanded="false">English</button>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">English</a></li>
                     <li><a class="dropdown-item" href="#">Italian</a></li>
@@ -39,7 +39,7 @@
                 <h4 class="mt-3">Maturity Settings:</h4>
                 <h4 class="badge text-bg-secondary">ALL MANURITY RATINGS</h4>
                 <p>Show titles of all maturity for this profile.</p>
-                <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">EDIT</button>
+                <button type="button" class="btn btn-outline-secondary fs-6 mb-4 me-2">EDIT</button>
               </div>
               <div class="col m-2">
                 <h4 class="mt-3">Autoplay controls</h2>
@@ -55,9 +55,20 @@
             </div>
           </div>
           <div>
-            <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">SAVE</button>
-            <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">CANCEL</button>
-            <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">DELETE PROFILE</button>
+            <div class="row justify-content-between">
+              <div class="col-auto">
+
+                <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">SAVE</button>
+              </div>
+              <div class="col-auto">
+
+                <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">CANCEL</button>
+              </div>
+              <div class="col-auto">
+
+                <button type="button" class="btn btn-outline-secondary fs-6 mt-2 me-2">DELETE PROFILE</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
