--- a/profile-page.html
+++ b/profile-page.html
@@ -89,5 +89,11 @@
       integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+"
       crossorigin="anonymous"
     ></script>
+    <script>
+      let recivedVerify = localStorage.getItem("verify");
+      if (!recivedVerify) {
+        window.location.href = "sing-in.html";
+      }
+    </script>
   </body>
 </html>
