--- a/sing-in.html
+++ b/sing-in.html
@@ -132,6 +132,8 @@
       let pswTest = false;
       let interval;
       let x = 1;
+      let secondFocusPsw = false;
+      let secondFocusMail = false;
       pswMinLenght = function () {
         if (password.value.length < 4) {
           password.classList.add("border-danger");
@@ -174,6 +176,7 @@
       };
 
       mail.onblur = function (e) {
+        secondFocusMail = true;
         if (isNaN(mail.value.replaceAll(" ", ""))) {
           setTimeout(() => {
             mailVerify();
@@ -191,65 +194,69 @@
       };
 
       mail.onfocus = function (e) {
-        mailErr.classList.add("d-none");
-        mail.addEventListener("keyup", function (event) {
-          if (isNaN(mail.value.replaceAll(" ", ""))) {
-            errChange.innerText = ml;
-            if (isNaN(parseInt(event.key))) {
-              if (event.key === `Backspace`) {
-                mailVerify();
-              } else if (event.key === "Alt") {
-                if (mail.value.includes("@")) {
-                  mail.classList.remove("border-danger");
-                  mailErr.classList.add("d-none");
+        if (secondFocusMail) {
+          mailErr.classList.add("d-none");
+          mail.addEventListener("keyup", function (event) {
+            if (isNaN(mail.value.replaceAll(" ", ""))) {
+              errChange.innerText = ml;
+              if (isNaN(parseInt(event.key))) {
+                if (event.key === `Backspace`) {
+                  mailVerify();
+                } else if (event.key === "Alt") {
+                  if (mail.value.includes("@")) {
+                    mail.classList.remove("border-danger");
+                    mailErr.classList.add("d-none");
+                  }
                 }
               }
-            }
-          } else {
-            if (!mail.value) {
-              errChange.innerText = def;
             } else {
-              errChange.innerText = ph;
-            }
-            mail.classList.remove("border-danger");
-            mailErr.classList.add("d-none");
-            if (mail.value.replaceAll(" ", "").length > 10) {
-              mail.classList.add("border-danger");
-              mailErr.classList.remove("d-none");
-            }
-            if (event.key === `Backspace`) {
-              if (mail.value.replaceAll(" ", "").length < 10) {
+              if (!mail.value) {
+                errChange.innerText = def;
+              } else {
+                errChange.innerText = ph;
+              }
+              mail.classList.remove("border-danger");
+              mailErr.classList.add("d-none");
+              if (mail.value.replaceAll(" ", "").length > 10) {
                 mail.classList.add("border-danger");
                 mailErr.classList.remove("d-none");
               }
+              if (event.key === `Backspace`) {
+                if (mail.value.replaceAll(" ", "").length < 10) {
+                  mail.classList.add("border-danger");
+                  mailErr.classList.remove("d-none");
+                }
+              }
             }
-          }
-        });
+          });
+        }
       };
 
       password.onblur = function (e) {
+        secondFocusPsw = true;
         setTimeout(() => {
           pswMinLenght();
         }, 10);
       };
 
       password.onfocus = function (e) {
-        pswErr.classList.add("d-none");
-        password.addEventListener("keyup", function (event) {
-          if (event.key === `Backspace`) {
-            if (password.value.length < 4) {
-              password.classList.add("border-danger");
-              pswErr.classList.remove("d-none");
+        if (secondFocusPsw) {
+          pswErr.classList.add("d-none");
+          password.addEventListener("keyup", function (event) {
+            if (event.key === `Backspace`) {
+              if (password.value.length < 4) {
+                password.classList.add("border-danger");
+                pswErr.classList.remove("d-none");
+              }
+            } else {
+              if (password.value.length > 3) {
+                password.classList.remove("border-danger");
+                pswErr.classList.add("d-none");
+              }
             }
-          } else {
-            if (password.value.length > 3) {
-              password.classList.remove("border-danger");
-              pswErr.classList.add("d-none");
-            }
-          }
-        });
+          });
+        }
       };
-
       form.onsubmit = function (e) {
         e.preventDefault();
         if (password.value.length > 3) {
